Update style with proper anchor reference for image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1011,7 +1011,7 @@ section {
 }
 
 .counts .image {
-  background: url("https://jeokoroafor.com/assets/img/counts-img.jpg") center
+  background: url("https://github.com/jeokoroafor/devops/blob/main/assets/img/counts-img.jpg") center
     center no-repeat;
   background-size: cover;
   min-height: 400px;
